# blu

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Pipfile  README.md  pyproject.toml  todo.txt
docs/: conf.py  contributing.rst  index.rst  install.rst  quickstart.rst  requirements.txt
docs/_includes/: client-element-call-notes.rst  client-element-children.rst  client-side-rendering-notes.rst  hook-note.rst  hooks.rst  iterables-must-use-keys-note.rst
docs/_static/: styles.css
docs/_templates/: layout.html
docs/api-reference/: blu.html.rst  blu.rst  cli.rst  external-libraries.rst  external-packages.rst  file-conventions.rst  index.rst  js.rst  pyscript.rst  routing-conventions.rst
docs/user-guide/: client-side-rendering.rst  creating-pages.rst  deploying-your-app.rst  index.rst  routing.rst  static-files.rst
src/blu/: __init__.py  _app.py  _cli.py  _default_app.py  _exceptions.py  _hooks.py  _http.py  _nodes.py  _server_functions.py  _settings.py  html.py  util.js
src/blu/_app/: __init__.py  _build.py  _dev.py  build_utils.py  call.py  client_main.py  http.py  render.py  router.py
src/blu/_app_old/: __init__.py  _build.py  _dev.py
src/blu/_cli/: __init__.py  build.py  dev.py
src/blu/_client/: main.py
src/blu/_core/: http.py  nodes.py
src/blu/_http/: __init__.py  _http.py  _render.py
src/blu/_react/: __init__.py  _http.py  client_decorator.py  hooks.py  html.py  types.py  utils.py
src/blu/_static_files/: main.py
src/blu/_utils/: __init__.py  asgi.py  asyncio.py  client.py  json.py  typing.py
src/tests/: conftest.py  test_js.py  utils.py
src/tests/blu/: test_ClientElement.py  test_HTMLElement.py  test_Key.py  test_Node.py  test_Ref.py  test_Response.py  test_app.py  test_create_rare_html_element.py  (+4 more)
tests/: conftest.py  test_cli.py  test_e2e.py  test_pyscript.py  utils.py
tests/blu/: test_ClientElement.py  test_HTMLElement.py  test_Key.py  test_Ref.py  test_Response.py  test_app.py  test_client.py  test_client_availability.py  test_create_rare_html_element.py  test_html.py  test_is_client.py  test_security.py  test_server.py  test_use_state.py
tests/doc_examples/: test_quickstart.py
tests/fast/: test_cli.py  test_security.py
tests/file_conventions/: _utils.py  test_all_python_modules.py  test_static_files.py
tests/resources/: server_fn_outside_app.py
(+172 files in other folders)
