[project]
name = "blu"
version = "0.0.1"
dependencies = ["aiofiles", "uvicorn", "click", "watchdog"]

[project.scripts]
blu = "blu._cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
# log_cli = true
# addopts = "--show-capture=all"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

