[project]
name = "blu"
version = "0.0.1-rc1"
authors = [
    { name="John Larson", email="john.robert.larson@gmail.com" },
]
description = "A full stack React framework for Python"
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]
dependencies = ["aiofiles", "uvicorn"]

[project.urls]
Homepage = "https://github.com/johnlarson/blu"
Issues = "https://github.com/johnlarson/blu/issues"


[project.scripts]
blu = "blu._cli:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "black>=26.3.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-httpserver>=1.1.5",
    "pytest-playwright>=0.7.2",
    "pytest-unordered>=0.7.0",
    "pytest-xdist>=3.8.0",
    "quart>=0.20.0",
    "requests>=2.33.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-copybutton>=0.5.2",
]

